spargen/tests/snapshots/diff__renumbering_a_status_in_a_response_enum_is_major_on_either_side-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|error-type-changed|GET /pets|error type `Error{404:(), 409:String}` -> `Error{404:(), 410:String}`
bump=major
