spargen/tests/snapshots/diff__renumbering_a_status_in_a_response_enum_is_major_on_either_side.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /pets|success type `Success{200:Pet, 201:String}` -> `Success{200:Pet, 202:String}`
bump=major
